Fix linguistic error in README

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 Code for PDFD
 =============
 
-Prot's Dots For Debian (PDFD) is the book that guides users the process
-of reproducing my custom BSPWM session on Debian 10 'buster'.
+Prot's Dots For Debian (PDFD) is the book that guides users through the
+process of reproducing my custom BSPWM session on Debian 10 'buster'.
 
 This repo contains the latest "fixed release" of my dotfiles.  Actual
 development takes place there: https://gitlab.com/protesilaos/dotfiles
